Changelog
=========

1.0a7 - unreleased
------------------

- conditionally import zope.app.keyreference since it
  seems like plone 4 has conflicts with the package
  [vangheem]
  

1.0a6 - 2010-10-14
------------------

- First public release 
  [ggozad]

1.0a5 - 2010-10-14
------------------

- Instead of guessing where a userid may be coming from, record the path
  of the userfolder and use that to reinstate the user.
  [mj]

1.0a4 - 2010-09-09
------------------

- Use multi-db setup in tests to keep testcaselayer working as expected.
  [stefan, ggozad]

1.0a3 - 2010-09-01
------------------

- Separate helper function from test setup so it can be used in non-test code.
  [witsch]

1.0a2 - 2010-08-30
------------------

- Made separate zcml configurations for single/multi and instance/worker.
  [stefan, ggozad]

1.0a1 - 2010-08-25
------------------

- zc.async integration for Plone. Initial release.
  [ggozad, stefan]